--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 														<span class="lnr lnr-plus-circle fa-bold"> <b>افزودن به سبد خرید</b> </span>
 														 
 													</button>
-													<button class="btn-cart welcome-add-cart welcome-more-info" onclick="window.location.href='#'">
+													<button class="btn-cart welcome-add-cart welcome-more-info" onclick="window.location.href='https://alix0066.github.io/More-Info/'">
 														اطلاعات بیشتر
 													</button>
 												</div><!--/.welcome-hero-txt-->
