--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
 													<button class="btn-cart welcome-add-cart" onclick="window.location.href='#'">
 														<span class="lnr lnr-plus-circle"> <b>افزودن به سبد خرید</b> </span>
 													</button>
-													<button class="btn-cart welcome-add-cart welcome-more-info" onclick="window.location.href='#'">
+													<button class="btn-cart welcome-add-cart welcome-more-info" onclick="window.location.href='https://alix0066.github.io/MoreInfo/'">
 														اطلاعات بیشتر
 													</button>
 												</div><!--/.welcome-hero-txt-->
