--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@
 				                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-menu">
 				                    <i class="fa fa-bars"></i>
 				                </button>
-				            <a class="navbar-brand" href="index.html"><span style="color: #239307;">IRAN</span> <span style="color: #239307;">GA</span><span style="color: #de384c;">RD</span> <span style="color: #DE384C;">SHOP</span></a>
+				            <a class="navbar-brand" href="https://alix0066.github.io/IRANGARDSHOP/"><span style="color: #239307;">IRAN</span> <span style="color: #239307;">GA</span><span style="color: #de384c;">RD</span> <span style="color: #DE384C;">SHOP</span></a>
 
 				            </div><!--/.navbar-header-->
 				            <!-- End Header Navigation -->
@@ -293,7 +293,7 @@
 				                    <li class="scroll"><a href="https://webcara.ir/bz1/?page_id=634"><b>ارتباط با ما</b></a></li>
 									<li class="scroll"><a href="https://webcara.ir/bz1/?page_id=1192"><b>درباره ما</b></a></li>
 									<li class="scroll"><a href="#new-arrivals"><b>محصولات جدید</b></a></li>
-									<li class=" scroll active"><a href="#home"><b>خانه</b></a></li>
+									<li class=" scroll active"><a href="https://alix0066.github.io/IRANGARDSHOP/"><b>خانه</b></a></li>
 				                </ul><!--/.nav -->
 				            </div><!-- /.navbar-collapse -->
 				        </div><!--/.container-->
